[package]
name = "apex_titan"
version = "87.0.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
ethers-flashbots = "0.14"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
petgraph = "0.6"
colored = "2.0"
log = "0.4"
env_logger = "0.10"
url = "2.0"
